kube/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
  - name: debug-container
    image: busybox
    command: ['sh', '-c', 'sleep 3600']
    resources:
      limits:
        cpu: 50m
        memory: 100Mi
      requests:
        cpu: 25m
        memory: 50Mi
