kube/fluentd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd
  labels:
    app: fluentd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      containers:
      - name: fluentd
        image: fluent/fluentd:latest
        volumeMounts:
          - name: varlog
            mountPath: /var/log
          - name: fluentd-config
            mountPath: /fluentd/etc
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: fluentd-config
          configMap:
            name: fluentd-config
