kube/ingress-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: default
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      nodePort: 30871
    - name: https
      port: 443
      nodePort: 30443
  selector:
    app.kubernetes.io/name: ingress-nginx
