kube/ingress-setup.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-service
  namespace: default
spec:
  ports:
  - port: 9000
    protocol: TCP
  selector:
    app: tcp-service
---
apiVersion: v1
kind: Service
metadata:
  name: udp-service
  namespace: default
spec:
  ports:
  - port: 10000
    protocol: UDP
  selector:
    app: udp-service
