kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/affinity: cookie
    # nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  ingressClassName: nginx
  rules:
    - host: demosamander.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /todo
            pathType: Prefix
            backend:
              service:
                name: todo-service
                port:
                  number: 80
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
